# ssrfid-backend

./: .env.example  .gitignore  README.md  docker-compose.yml  local.yml  production.yml  pyproject.toml  requirements.in  requirements.txt  run_server.bat  tk_estoque.py
app/: auth.py  create_admin.py  create_tables.py  database.py  main.py  seed.py  settings.py
app/cli/: cli.py  utils.py
app/core/: exception_handler.py  exceptions.py  lifespan.py  logger.py
app/crud/: conferencia.py  peca.py  relatorio.py  usuario.py
app/models/: conferencia.py  mixins.py  peca.py  usuario.py
app/routers/: auth.py  conferencia.py  peca.py  relatorio.py  usuario.py
app/schemas/: auth.py  conferencia.py  peca.py  relatorio.py  shared.py  usuario.py
compose/fastapi/: Dockerfile  Dockerfile.dev  Dockerfile.production  start  start-dev  start-prod
migrations/: env.py
migrations/versions/: 1218d6326e63_add_quantidade_rename_timestamp_leitura.py  33a8982d3940_add_user_role.py  7217bdb87322_adicionar_timestamps_ao_inventario.py  87220ea4451a_create_conferencia_models.py  8d7ae4847811_create_conference_models.py  9dc857695827_rfid_uuid_string_field_on_taglida.py  c057ea615d0d_create_conferencia_models.py  d6f91f7cbb3b_.py  e3db58badf4a_add_rfid_uuid_unique_contraint_to_tag_.py  e6f6038dd985_remove_unessessary_details_from_peca_.py  ea59d45b64d1_add_unique_constraint_leitura_.py  ffd8e85ce851_add_unique_constraint_leitura_.py
tests/: README.md  conftest.py  test_auth.py  test_conferencia.py  test_peca.py  test_relatorio.py  test_usuario.py
tk_client/: main.py
